--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "serverless-http": "^3.2.0",
@@ -100,6 +101,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-router-dom": "^5.3.3",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
