--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.8.0",
